[package]
name = "lsp-document"
version = "0.6.0"
authors = ["Artem Pyanykh <artem.pyanykh@gmail.com>"]
edition = "2018"
description = "Helpers to convert between LSP documents and Rust strings"
readme = "README.md"
repository = "https://github.com/artempyanykh/rust-lsp-document"
license = "MIT"

[dependencies]
lsp-types = "0.94.0"

[dev-dependencies]
pretty_assertions = "0.7.1"